--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<! DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 	<head>
-	
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<title>                               &#352;ljivik</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
@@ -15,7 +14,6 @@
 				document.getElementsByTagName("body")[0].style.marginTop="1px";
 				window.scrollTo(0, 1);
 			}
-			
 			window.addEventListener("load", hideUrlBar);
 			window.addEventListener("resize", hideUrlBar);
 			window.addEventListener("orientationchange", hideUrlBar);
@@ -69,8 +67,8 @@
 		This content requires HTML5/CSS3, WebGL, or Adobe Flash Player Version 9 or higher.
 		</div>
 		<script type="text/javascript">
-			
-			<!-- 
+	
+	
 			// create the panorama player with the container
 			pano=new pano2vrPlayer("container");
 			// add the skin object
@@ -79,23 +77,20 @@
 			pano.readConfigUrl("pano_out.xml");
 			// hide the URL bar on the iPhone
 			hideUrlBar();
-			-->
 		</script>
 		<noscript>
 			<p><b>Please enable Javascript!</b></p>
 		</noscript>
 		
-		<br/>
-		<form method="post">
+		<p>
 		<table>
 			<tr>
 				<td><b>Description</b></td>
 				<td>Opale &#352;ljive</td>
-								
 			</tr>
 			<tr>
 				<td><b>Author</b></td>
-				<td>Nikola Kne&#382;evic</td>
+				<td>Nikola Kne&#382;evi&#263;</td>
 			</tr>
 			<tr>
 				<td><b>Date/Time</b></td>
@@ -106,11 +101,7 @@
 				<td><input name="komentar" type="text" /></td>
 			</tr>
 		</table>
-		<input type="submit" name = "send" value="Send comment" />
-
 		<hr>
-		</form>
 		<a href="downloads"> Downloads </a> <br/>
-		<a href="slagalica/slagalica.html"> Slagalica </a>
-		</body>
+	</body>
 </html>
