--- a/downloads/index.html
+++ b/downloads/index.html
@@ -3,5 +3,5 @@
 <body>
 <a href="Planete.apk">Planete</a> <br/>
 <a href="Kuglice.jar">Kuglice</a> <br/>
-<a href="Arkanodi.jar">Arkanoid</a> <br/>
+<a href="Arkanoid.jar">Arkanoid</a> <br/>
 </body>
