--- a/index.html
+++ b/index.html
@@ -1,107 +1,76 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-		<title>                               &#352;ljivik</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
-		<meta name="apple-mobile-web-app-capable" content="yes" />
-		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-		<link rel="shortcut icon" href="icon.png"/>
-		<script type="text/javascript">
-			// hide URL field on the iPhone/iPod touch
-			function hideUrlBar() {
-				
-				document.getElementsByTagName("body")[0].style.marginTop="1px";
-				window.scrollTo(0, 1);
-			}
-			window.addEventListener("load", hideUrlBar);
-			window.addEventListener("resize", hideUrlBar);
-			window.addEventListener("orientationchange", hideUrlBar);
-		</script>
-		<style type="text/css" title="Default">
-			body, div, h1, h2, h3, span, p {
-				font-family: Verdana,Arial,Helvetica,sans-serif;
-				color: #000000; 
-			}
-			body {
-			  font-size: 10pt;
-			  background : #ffffff; 
-			}
-			table,tr,td {
-				font-size: 10pt;
-				border-color : #777777;
-				background : #dddddd; 
-				color: #000000; 
-				border-style : solid;
-				border-width : 2px;
-				padding: 5px;
-				border-collapse:collapse;
-			}
-			h1 {
-				font-size: 18pt;
-			}
-			h2 {
-				font-size: 14pt;
-			}
-			.warning { 
-				font-weight: bold;
-			} 
-			/* fix for scroll bars on webkit & Mac OS X Lion */ 
-			::-webkit-scrollbar {
-				background-color: rgba(0,0,0,0.5);
-				width: 0.75em;
-			}
-			::-webkit-scrollbar-thumb {
-    			background-color:  rgba(255,255,255,0.5);
-			}
-		</style>	
-	</head>
-	<body>
-		<h1>                               &#352;ljivik</h1>
-		<br>
-		<script type="text/javascript" src="pano2vr_player.js">
-		</script>
-		<script type="text/javascript" src="skin.js">
-		</script>
-		<div id="container" style="width:1000px;height:400px;">
-		This content requires HTML5/CSS3, WebGL, or Adobe Flash Player Version 9 or higher.
-		</div>
-		<script type="text/javascript">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
 	
-			// create the panorama player with the container
-			pano=new pano2vrPlayer("container");
-			// add the skin object
-			skin=new pano2vrSkin(pano);
-			// load the configuration
-			pano.readConfigUrl("pano_out.xml");
-			// hide the URL bar on the iPhone
-			hideUrlBar();
-		</script>
-		<noscript>
-			<p><b>Please enable Javascript!</b></p>
-		</noscript>
-		
-		<p>
-		<table>
-			<tr>
-				<td><b>Description</b></td>
-				<td>Opale &#352;ljive</td>
-			</tr>
-			<tr>
-				<td><b>Author</b></td>
-				<td>Nikola Kne&#382;evi&#263;</td>
-			</tr>
-			<tr>
-				<td><b>Date/Time</b></td>
-				<td>11.09.2013.</td>
-			</tr>
-			<tr>
-				<td><b>Comment</b></td>
-				<td><input name="komentar" type="text" /></td>
-			</tr>
-		</table>
-		<hr/>
-		<a href="downloads"> Downloads </a> <br/>
-	</body>
+	<meta http-equiv="origin-trial" data-feature="Generic Sensors">
+        
+	
+    <title>Nikola Knezevic</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css"/>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
+	
+	<style>
+		#panorama {
+			height: 100%;
+		}
+		html, body {
+			height: 100%;
+			margin: 0;
+			padding: 0;
+		}
+		#overlay {
+			position: absolute;
+			top: 0;
+			left: 0;
+			height: 100%;
+			width: 100%;
+			margin: 0;
+			padding: 0;
+			background-color: rgba(0,0,0,0.7);
+			z-index: 10;
+		}
+	</style>
+</head>
+<body>
+
+<div id="panorama"></div>
+<div id="console"></div>
+<div id="overlay"></div>
+
+<script>
+var consoleContainer = document.getElementById("console");
+var panorama = document.getElementById("panorama");
+var overlay = document.getElementById("overlay");
+var consolee = {
+	log: function(arg) {
+		consoleContainer.innerHTML += arg + "<br/>";
+	}
+};
+console.log(window.AbsoluteOrientationSensor)
+var viewer = pannellum.viewer('panorama', {
+    "type": "equirectangular",
+    "panorama": "pano.jpg",
+	"autoLoad": true,	
+	"showZoomCtrl": false,
+	"keyboardZoom": false,
+	"draggable": false,
+	"disableKeyboardCtrl": true,
+	"showFullscreenCtrl": false,
+	"showControls": false,
+});
+overlay.onmousemove = function(e) {
+	// console.log(e.x + " - " + e.y);
+	var pWidth = panorama.offsetWidth;
+	var pHeight = panorama.offsetHeight;
+	var pitch = 30 - e.y / pHeight * 60;
+	var yaw = e.x / pWidth * 360 - 180;
+	viewer.lookAt(pitch, yaw, viewer.getHfov(), false);
+}
+
+</script>
+
+</body>
 </html>
