Set lower field of view on mobile devices

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ overlay.onmousemove = function(e) {
 }
 if (window.OrientationSensor) {
 	viewer.startOrientation();
+	viewer.setHfov(50);
 }
 </script>
 
