dodata linkovi ka igricama u panorami

--- a/downloads/index.html
+++ b/downloads/index.html
@@ -1,7 +1,11 @@
 <html>
-<head/>
-<body>
-<a href="Planete.apk">Planete</a> <br/>
-<a href="Kuglice.jar">Kuglice</a> <br/>
-<a href="Arkanoid.jar">Arkanoid</a> <br/>
-</body>
+    <head></head>
+    <body>
+        <a href="Arkanoid.jar">Arkanoid</a> <br/>
+        <a href="Console Fire Game.exe">Console Fire Game</a> <br/>
+        <a href="Kuglice.jar">Kuglice</a> <br/>
+        <a href="Planete.apk">Planete</a> <br/>
+        <a href="Planete3D.zip">Planete 3D</a> <br/>
+        <a href="Slagalica.jar">Slagalica</a> <br/>
+    </body>
+</html>
