--- a/index.html
+++ b/index.html
@@ -82,44 +82,37 @@
                 },
                 {
                     "pitch": -12,
-                    "yaw": -55,
+                    "yaw": 66,
                     "cssClass": "custom-hotspot",
                     "createTooltipFunc": createEducation,
                     "scale": true,
                 },
                 {
                     "pitch": -12,
-                    "yaw": 50,
+                    "yaw": 114,
                     "cssClass": "custom-hotspot",
                     "createTooltipFunc": createSkills,
                     "scale": true,
                 },
                 {
                     "pitch": -12,
-                    "yaw": 95,
+                    "yaw": 170,
                     "cssClass": "custom-hotspot",
                     "createTooltipFunc": createWorkExperience,
                     "scale": true,
                 },
                 {
                     "pitch": -12,
-                    "yaw": -100,
+                    "yaw": 233,
+                    "cssClass": "custom-hotspot",
+                    "createTooltipFunc": createPersonalProjects,
+                    "scale": true,
+                },
+                {
+                    "pitch": -12,
+                    "yaw": 305,
                     "cssClass": "custom-hotspot",
                     "createTooltipFunc": createPersonalityAndInterests,
-                    "scale": true,
-                },
-                {
-                    "pitch": -12,
-                    "yaw": 150,
-                    "cssClass": "custom-hotspot",
-                    "createTooltipFunc": createSchoolProjects,
-                    "scale": true,
-                },
-                {
-                    "pitch": -12,
-                    "yaw": -145,
-                    "cssClass": "custom-hotspot",
-                    "createTooltipFunc": createSideProjects,
                     "scale": true,
                 },
             ]
